# focusaniso

./: LICENSE  README.md  focusaniso.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_focusaniso.py
docs/: conf.py  focusaniso.rst  index.rst  theory.rst
examples/: birefringent_lacquer.py  birefringent_resist.py  non_symmetric_beam.py
