[metadata]
name = focusaniso
author = Dominik Beutel
author_email = dominik.beutel@kit.edu
url = https://git.scc.kit.edu/photonics/focusaniso
description = "Light focusing in anisotropic media"
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
py_modules = focusaniso
install_requires =
    numpy

[options.extras_require]
test =
    pytest
    pytest-cov
docs =
    sphinx

[pydocstyle]
match-dir = (?!tests)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
convention = numpy

[flake8]
filename = *.py
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = E203,E501

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"
